# post_components/post.route.js
@@ -9,7 +9,9 @@ router.get('/images', authenMiddleware.isAuth, postController.getAllImageUser);
 router.put('/images/:id', authenMiddleware.isAuth, postController.updateCapImage);
 router.delete('/images/:id', authenMiddleware.isAuth, postController.deleteImage);
 
-router.get("/:id/comments", authenMiddleware.isAuth, postController.getAllCmtDesc);
+router.get("/:id/comments", authenMiddleware.isAuth, postController.getAllCmt);
+router.post('/:id/comments', authenMiddleware.isAuth , postController.createComment);
+router.post('/:id/comments/:comment_id', authenMiddleware.isAuth , postController.createComment);
 router.put("/:id/comments/:comment_id", authenMiddleware.isAuth, postController.updateComment);
 router.delete("/:id/comments/:comment_id", authenMiddleware.isAuth, postController.deleteComment);
 router.post("/:id/comments/:comment_id/like", authenMiddleware.isAuth, postController.likeComment);
@@ -18,8 +20,6 @@ router.get('/getUrlUpload', authenMiddleware.isAuth ,postController.uploadLink);
 router.post('/', authenMiddleware.isAuth , postController.uploadPost);
 router.post('/uploadImage',authenMiddleware.isAuth,upload,postController.uploadImage);
 router.post('/:id/like', authenMiddleware.isAuth, postController.likePost );
-router.post('/:id/comment', authenMiddleware.isAuth , postController.commentPost);
-router.post('/:id/comments/:idcmt', authenMiddleware.isAuth , postController.replyComment);
 router.put('/:id', authenMiddleware.isAuth, postController.updatePost);
 router.delete('/:id', authenMiddleware.isAuth, postController.deletePost);
 router.get('/users/:id/post', authenMiddleware.isAuth, postController.listPost);
